--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 -Clint Frazier
 </p>
 
-<h3>Lorem Ipsum</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl felis, ultricies ac euismod quis, tempus sed orci. Nullam gravida turpis non dolor volutpat fermentum. Donec condimentum rhoncus justo nec tincidunt. Etiam varius mi in tempus rutrum. Aenean vulputate sem velit, eu porta eros iaculis vitae. Donec gravida iaculis libero. In facilisis ac eros finibus lobortis. Nullam et molestie nisi, et vehicula est.</p>
+<h3>Best Used Clubs Money Can Buy!!</h3>
+	<p>Come on down and visit us, you won't be disappointed!!!</p>
 
 </article> <!-- end main -->
 
