--- a/pricing.html
+++ b/pricing.html
@@ -67,7 +67,7 @@ src="https://www.youtube.com/embed/x3ZefEI-Rpo">
 </iframe>
 </article> <!-- end main -->
 
-
+<aside>
 
 <h3>Hours</h3>
 
@@ -81,17 +81,20 @@ src="https://www.youtube.com/embed/x3ZefEI-Rpo">
   <img src = "images/scotty.jpg" alt = "scotty putter in front of golf bag"  />
   </figure>
 
-    THE Scotty Cameron!<br />
+<figcaption>
+    <p>THE Scotty Cameron!</p>
+	</figcaption>
       
 	  
 <figure>	  
 	   <img src = "images/ghost.jpg" alt = "odyssey ghost in front of golf bag"  />
 </figure>
  
-    Odyssey Ghost White Hot!<br />
-   
+ <figcaption>
+    <p>Odyssey Ghost White Hot!</p>
+   </figcaption>
 	  
-	  
+</aside>
 
 
   
