--- a/pricing.html
+++ b/pricing.html
@@ -23,7 +23,7 @@
 
 <header> 
 
-<a href="index.html"><img src="images/pitterpatterputter.png" alt="golf clubs and golf ball"/></a>
+<a href="index.html"><img src="images/pitterpatterputter.png" alt="golf clubs and golf ball logo"/></a>
 
 </header> 
 
@@ -81,18 +81,13 @@ src="https://www.youtube.com/embed/x3ZefEI-Rpo">
   <img src = "images/scotty.jpg" alt = "scotty putter in front of golf bag"  />
   </figure>
 
-<figcaption>
     <p>THE Scotty Cameron!</p>
-	</figcaption>
-      
 	  
 <figure>	  
 	   <img src = "images/ghost.jpg" alt = "odyssey ghost in front of golf bag"  />
 </figure>
  
- <figcaption>
     <p>Odyssey Ghost White Hot!</p>
-   </figcaption>
 	  
 </aside>
 
