--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <header> 
 
-<a href="index.html"><img src="images/pitterpatterputter.png" alt="golf clubs and golf ball"/></a>
+<a href="index.html"><img src="images/capture.png" alt="golf clubs and golf ball"/></a>
 
 </header> 
 
