--- a/contactus.html
+++ b/contactus.html
@@ -84,10 +84,14 @@
 					<label for="dineSpin">How many times do you golf a year?</label>
 					<input name="dineOut" id="dineSpin" type="number" value="1" step="1" min="0" max="20" />
 				</div>
+				
+				</fieldset>
 <div id="buttons">
 			<input type="submit" value="Submit" />
 			<input type="reset" value="Cancel" />
 		</div>
+		
+		</form>
 		
 			<fieldset>
 		<label for="commBox">Tell us more how we can make you a better golfer!</label>
