--- a/contactus.html
+++ b/contactus.html
@@ -94,7 +94,7 @@
 		</form>
 		
 			<fieldset>
-		<label for="commBox">Tell us more how we can make you a better golfer!</label>
+		<label for="commBox">Tell us how we can make you a better golfer!</label>
 		<textarea name="custExp" id="commBox"></textarea>
 			</fieldset>
 
