--- a/index.html
+++ b/index.html
@@ -43,22 +43,12 @@
 <h2>About Us</h2>
 	<p>Pitter Patter Putter is a 5th generation owned business that specializes in refurbishing and selling used golf putters, clubs and golf balls. Let us assist in your journey to getting under par!</p>
 
-<h3>Reviews</h3>
-	<p>Pitter Patter Putter is super friendly and knowledgeable in all aspects of golf, they don’t focus on making a sale, they truly care about improving your golf game!
--Johnny Smith
-</p>
+<h3>Featured Putters</h3>
+<figure>
+  <img src = "images/putter.png" alt = "two golf putters"  />
 
-<p>Affordable prices, always have great equipment on hand.
--Will Smith
-</p>
-
-<p>When I am heading out to play a round, I always make sure to stop by and pick up a box of balls.
--Jeff Potter
-</p>
-
-<p>I always support local family businesses and this is a business everyone should support!
--Clint Frazier
-</p>
+  
+</figure>
 
 <h3>Best Used Clubs Money Can Buy!!</h3>
 	<p>Come on down and visit us, you won't be disappointed!!!</p>
