--- a/pricing.html
+++ b/pricing.html
@@ -40,6 +40,9 @@
 	 
 <article id = "main"> 
 
+<table>
+
+<td>
 <h3>Services</h3>
 	<p>Putters Woods Irons Balls</p>
 
@@ -58,6 +61,10 @@
 <h3>Balls</h3>
 <p>Titleist $25 for 12 Balls, Callaway $20 for 12 Balls
 </p>
+
+</td>
+
+</table>
 
 <h3>Best Used Clubs Money Can Buy!!</h3>
 	<p>Come on down and visit us, you won't be disappointed!!!</p>
